--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Readable JavaScript</title>
 <script type="text/javascript">
 window.addEventListener('load', function () {
-  function s2b(s) { return s === 'true' ? true : false; }
-  if (!s2b(widget.preferences['enable_button'])) return;
+if (typeof widget === 'undefined' || typeof widget.preferences === 'undefined' || (widget.preferences['enable_button'] === 'true')) {
   var theButton;
   var toolbarUIItemProperties = {
     title: 'Readable JavaScript',
@@ -18,6 +17,7 @@ window.addEventListener('load', function () {
   }
   theButton = opera.contexts.toolbar.createItem(toolbarUIItemProperties);
   opera.contexts.toolbar.addItem(theButton);
+}
 }, false);
 </script>
 </head>
