MyObfuscate packer support

--- a/options.html
+++ b/options.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta charset='UTF-8'><title id='widget_title'>Opera Extensions | Readable JavaScript</title>
+<html><head><meta charset='UTF-8'><title id='widget_title'>Readable JavaScript</title>
 <link rel='stylesheet' href='css/options.css'>
 <script type='text/javascript' src='includes/common.js'></script>
 <script>
@@ -97,7 +97,7 @@ for (var i=0, e; e=inputs[i]; i++) e.addEventListener('change', optionChange, fa
 <label for='preserve_newlines' id='preserve_newlines_label'>Preserve empty lines</label>
 <br/>
 <input type='checkbox' id='detect_packers'/>
-<label for='detect_packers' id='detect_packers_label'> Detect packers</label>
+<label for='detect_packers' id='detect_packers_label'>Detect packers</label>
 <br/>
 <input type='checkbox' id='keep_array_indentation'/>
 <label for='keep_array_indentation_label' id='keep_array_indentation_label'>Keep array indentation</label>
