--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 <script type='text/javascript' src='includes/unpacker_bookmarklet.js'></script>
 <script type='text/javascript' src='includes/unpacker_javascriptobfuscator.js'></script>
 <script type='text/javascript' src='includes/unpacker_p_a_c_k_e_r.js'></script>
+<script type='text/javascript' src='includes/unpacker_myobfuscate.js'></script>
 <script type='text/javascript' src='includes/common.js'></script>
 <script type='text/javascript'>
 document.getElementsByTagName('html')[0].setAttribute('lang', window.navigator.language.slice(0,2));
