--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Readable JavaScript</title>
+<title>Readable JavaScript [background]</title>
 <script type="text/javascript">
 window.addEventListener('load', function () {
     function onConnectHandler(event) {
